# ontonym-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: server.py
ontonym_core/: __init__.py  cli.py  core.py  coref.py  llm.py  schema.py
ontonym_core/prompts/: class.txt  object.txt
tests/: test_parsers.py  test_rendering.py
